--- a/src/Components/Pages/Css/ShopCategory.css
+++ b/src/Components/Pages/Css/ShopCategory.css
@@ -1,47 +1,33 @@
 .shopcategory-banner {
-    display: block;
-    margin: 30px auto;
-    width: 82%;
-  }
-  
-  .shopCategory-indexSort {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 30px 170px;
-  }
-  
-  .ShopCategory-sort {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    padding: 10px 20px;
-    border-radius: 40px;
-    border: 1px solid #888;
-    cursor: pointer;
-  }
-  
-  .shopCategory-indexSort p span {
-    font-weight: 600;
-  }
-  
-  .ShopCategory-Product {
-    margin: 20px 170px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 40px 30px;
-  }
-  .shopcategory-loadmore{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 150px auto;
-    width: 233px;
-    height: 69px;
-    border-radius: 75px;
-    background: #ededed;
-    color: #787878;
-    font-size: 18px;
-    font-weight: 500;
-  }
-  
+  display: block;
+  margin: 30px auto;
+  width: 82%;
+}
+
+.shopCategory-indexSort {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px 170px;
+}
+
+.shopCategory-sort {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 10px 20px;
+  border-radius: 40px;
+  border: 1px solid #888;
+  cursor: pointer;
+}
+
+.shopCategory-indexSort p span {
+  font-weight: 600;
+}
+
+.shopCategory-product {
+  margin: 20px 170px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px 30px;
+}
