--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -1,26 +1,41 @@
-.item{
-    width: 350px;
-}
-.item p{
+.item {
+    width: 100%; /* Let it be responsive instead of fixed 350px */
+    max-width: 300px; /* or 100% of the container */
+    margin: auto;
+  }
+  
+  .item img {
+    width: 100%; /* Makes image fill the .item container */
+    height: auto;
+    object-fit: cover;
+    border-radius: 8px;
+    display: block;
+  }
+  
+  .item p {
     margin: 6px 0px;
-}
-.item-price{
+  }
+  
+  .item-price {
     display: flex;
     gap: 30px;
-}
-.item-price-new{
+  }
+  
+  .item-price-new {
     color: #374151;
     font-size: 18px;
     font-weight: 600;
-}
-.item-price-old{
+  }
+  
+  .item-price-old {
     color: #8c8c8c;
     font-size: 18px;
     font-weight: 500;
     text-decoration: line-through;
-
-}
-.item:hover{
+  }
+  
+  .item:hover {
     transform: scale(1.05);
     transition: 0.6s;
-}
+  }
+  
